examples/type_system/failing/171_self_recursive_refinement_concrete_chain_e300.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

fn sum_down(n) {
    if n == 0 {
        0
    } else {
        1 + sum_down(n - 1)
    }
}

fn main() -> Unit {
    let x: String = sum_down(3)
}
